--- a/public/style.css
+++ b/public/style.css
@@ -136,3 +136,18 @@
     max-width: 460px;
     margin: auto;
 }
+
+.feather-16{
+    width: 16px;
+    height: 16px;
+}
+
+.feather-24{
+    width: 24px;
+    height: 24px;
+}
+
+.feather-32{
+    width: 32px;
+    height: 32px;
+}
